--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -1,6 +1,7 @@
 repositories {
     mavenCentral()
-    google() // Needed for androidxs  yes
+    google() // Needed for androidxs
+    jcenter()  // Needed for tensorflow-lite
     flatDir {
         dirs rootProject.file('libs')
     }
@@ -19,5 +20,6 @@ dependencies {
     implementation 'org.tensorflow:tensorflow-lite-task-vision:0.2.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'org.firstinspires.ftc:gameAssets-PowerPlay:1.0.0'
+    implementation 'com.acmerobotics.dashboard:dashboard:0.4.5'
 }
 
