--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -1,11 +1,9 @@
 repositories {
     mavenCentral()
-    google() // Needed for androidxs
-    jcenter()  // Needed for tensorflow-lite
+    google() // Needed for androidx
     flatDir {
         dirs rootProject.file('libs')
     }
-    maven { url = 'https://maven.brott.dev/' }
 }
 
 dependencies {
@@ -20,6 +18,5 @@ dependencies {
     implementation 'org.tensorflow:tensorflow-lite-task-vision:0.2.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'org.firstinspires.ftc:gameAssets-PowerPlay:1.0.0'
-    implementation 'com.acmerobotics.dashboard:dashboard:0.4.5'
 }
 
