--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -4,6 +4,8 @@ repositories {
     flatDir {
         dirs rootProject.file('libs')
     }
+    compile "com.google.zxing:core:3.3.0"
+    compile 'com.google.zxing:javase:3.3.0'
 }
 
 dependencies {
